feat: 추가정보 기입 진행되는 회원가입 로직 추가